--- a/basic/src/main/resources/META-INF/resources/index.html
+++ b/basic/src/main/resources/META-INF/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>IBM Travel Agency</title>
-
+    
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -13,9 +13,11 @@
 <body>
 <div class="container" role="main">
     <div class="jumbotron">
-        <h1>IBM Travel Agency</h1>
-
-        <p>Plan your next trip</p>
+        <img src="travel41.jpg" alt="Travel" width="1000" height="240">
+         <!-- https://www.freepik.com/free-vector/time-travel-vector-flyer-with-white-copy-space-sky-with-airplane_17128684.htm#query=travel&position=5&from_view=keyword">Image by user15245033</a> on Freepik -->        
+        <br><br>
+        <p>Powered by IBM RPA and PAM</p>
+       
     </div>
     <div class="page-header">
         <div class="row">
@@ -245,8 +247,8 @@
                                         class="form-control" id="city" name="city" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="postCode">postcode</label> <input type="text"
-                                        class="form-control" id="zipCode" name="zipCode" required>
+                                    <label for="postCode">Postcode</label> <input type="text"
+                                        class="form-control" id="postCode" name="postCode" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="country">Country</label> 
